# forest

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  BRANCHING.md  CHANGELOG.md  CLAUDE.md  FEATURE_CHECKLIST.md  FORMATTING_ARCHITECTURE.md  GIT_STYLE_REFERENCES.md  HOMEBREW-DISTRIBUTION.md  KINGDOM_SPEC.md  LSP-CRITICAL-FIXES.md  LSP-IMPLEMENTATION.md  LSP-REFINEMENT-COMPLETE.md  MIGRATION-COMPLETE.md  MODULE_SEPARATION.md  PR_SUMMARY.md  QUICK_REFERENCE.md  README.md  REFACTORING_GUIDE.md  SCORING_SPEC.md  SCORING_V2_PLAN.md  SYSTEM_OVERVIEW.md  TAURIIIIII.md  THIN_CLIENT_EXPLORATION.md  article.txt  demo.sh  dev.sh  export.json  forest_command_surface.txt  package-lock.json  package.json  plan-log.txt  record_commands.sh  test.txt  thin-client-demo.js  tsconfig.json
.claude/: settings.local.json
Camper/: PRODUCT_STRATEGY.md
completions/: README.md  forest.bash  forest.zsh
deploy/: Caddyfile  README.md  forest.service  update-remote.sh
docs/: COMMAND_SURFACE_README.md  MODULAR_COMMANDS_GUIDE.md  PREFLIGHT_CHECK.md  cli-desktop-bundling-assessment.md  cli-surface-proposal.md  document-template-implementation.md  embedding-model-recommendations.md  embedding-system-analysis.md  lex.txt  styling-techniques.md  tauri-desktop-app.md  tauri-desktop-quickstart.md  thin-client-implementation-example.md  thin-client-mode.md  tui-document-editor-adr.md
examples/: complex-business-workflow.md
forest-desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
forest-desktop/src-tauri/capabilities/: default.json
forest-desktop/src-tauri/examples/: embeddings_demo.rs  hybrid_scoring_demo.rs  score_comparison.rs
forest-desktop/src-tauri/migrations/: 20241024000000_initial_schema.sql  20241024120000_add_node_positions.sql
forest-desktop/src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs  shell_integration.rs  state.rs
forest-desktop/src-tauri/src/cli/: capture.rs  edges.rs  health.rs  mod.rs  node.rs  search.rs  stats.rs
forest-desktop/src-tauri/src/core/: embeddings.rs  linking.rs  mod.rs  scoring.rs  search.rs  text.rs
forest-desktop/src-tauri/src/db/: documents.rs  edges.rs  mod.rs  nodes.rs  types.rs  utils.rs
forest-desktop/src-tauri/tests/: db_test.rs  embeddings_test.rs  scoring_integration_test.rs
forest-embed/: Cargo.toml
forest-embed/src/: main.rs
(+336 files in other folders)
