[package]
name = "forest-embed"
version = "0.5.0"
description = "Lightweight embedding helper for Forest CLI"
authors = ["Forest Contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[dependencies]
anyhow = "1.0"
fastembed = "4.2"
serde_json = "1.0"

[profile.release]
strip = true
lto = true
opt-level = "z"
